primer commit gh-pages agrega un a

--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
     crossorigin="anonymous"></script>
     <!--Mi script -->
     <script src="assets/js/script.js"></script>
+    <a href="#">etiqueta en gh-pages></a>
     </body>
 
 </html>
